infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecotel
  labels:
    name: ecotel
    environment: production
